# recommend

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/consumer/: mod.rs  rocketmq.rs
src/dal/: kafka.rs  milvus.rs  mod.rs  model.rs  redis.rs
src/handler/: behavior_handler.rs  embedding_handler.rs  hotspot_handler.rs  mod.rs  recommend_handler.rs  search_handler.rs
src/hotspot/: mod.rs
src/proto/: common.proto  im.proto  recommend.proto
