[package]
name = "recommend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.0"
prost = "0.13.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rocketmq = "5.0.0"
rdkafka = { version = "0.37.0",features = ["cmake-build"] }
milvus-sdk-rust = "0.1.0"
redis = { version = "0.30.0",features = ["r2d2"] }
sentinel-core = { version = "0.1.3",features = ["full"] }
r2d2 = "0.8.10"
anyhow = "1.0.98"
rand = "0.9.1"
time = { version = "0.3.41", features = ["local-offset"] }
dashmap = "6.1.0"


[build-dependencies]
tonic-build = "0.13.0"
